tests/error/class-1.moc
@class Point {
}
@end

@class Point {
}
@end
